--- a/SFDL.NET 3/Resources/Strings.resx
+++ b/SFDL.NET 3/Resources/Strings.resx
@@ -686,4 +686,7 @@ Starten Sie den Download neu damit alle Einstellungen übernommen werden.</value
   <data name="ETA_AppTask_Status_4_Message" xml:space="preserve">
     <value>Download läuft - Speed: {0} KB/s | ETA: {1} | {2} %</value>
   </data>
+  <data name="GenerateSimpleSpeedreport_AppTask_Completed_Message" xml:space="preserve">
+    <value>{0} in {1} heruntergeladen @ ~ {2}</value>
+  </data>
 </root>
