Hab nur eine Meldung geändert
Da war noch "Fehler" statt "Error" drinnen

--- a/SFDL.NET 3/Resources/Strings.en.resx
+++ b/SFDL.NET 3/Resources/Strings.en.resx
@@ -654,7 +654,7 @@ Restart the download to apply these settings.</value>
     <value>Error: Unknown</value>
   </data>
   <data name="DownloadStatus_Failed_FileNameTooLong" xml:space="preserve">
-    <value>Fehler: Filename too long</value>
+    <value>Error: Filename too long</value>
   </data>
   <data name="DownloadStatus_Failed_NotEnoughDiskSpace" xml:space="preserve">
     <value>Error: Not enough disk space</value>
