Added Reset Settings Buttons | #146 Fixed Leading Zero miss at CRC Calculation | #144

--- a/SFDL.NET 3/Resources/Strings.en.resx
+++ b/SFDL.NET 3/Resources/Strings.en.resx
@@ -686,4 +686,10 @@ Restart the download to apply these settings.</value>
   <data name="VariousStrings_LibrHashMissingException" xml:space="preserve">
     <value>LibRHash Libary not found!</value>
   </data>
+  <data name="Settings_ResetSettings" xml:space="preserve">
+    <value>Reset settings</value>
+  </data>
+  <data name="Settings_ResetSpeedreport" xml:space="preserve">
+    <value>Reset Speedreport</value>
+  </data>
 </root>
