--- a/SFDL.NET 3/Resources/Strings.resx
+++ b/SFDL.NET 3/Resources/Strings.resx
@@ -719,6 +719,9 @@ Starten Sie den Download neu damit alle Einstellungen übernommen werden.</value
   <data name="VariousStrings_CancelButton" xml:space="preserve">
     <value>Abbruch</value>
   </data>
+  <data name="DownloadStatus_HashCheck" xml:space="preserve">
+    <value>Download abgeschlossen - Checksumme wird überprüft</value>
+  </data>
   <data name="MainMenu_Help_Wiki" xml:space="preserve">
     <value>SFDL.NET Wiki</value>
   </data>
